--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,7 @@
     "moment": "~2.10.6",
     "animate.css": "~3.4.0",
     "angular": "~1.4.2",
-    "aws-sdk": "~2.2.36"
+    "aws-sdk": "2.2.34"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.2"
